--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -53,6 +53,7 @@ rand_core = { version = "0.6", default-features = false }
 tracing = "0.1"
 blake2b_simd = "1"
 sha3 = "0.9.1"
+log = "0.4"
 
 # Developer tooling dependencies
 plotters = { version = "0.3.0", optional = true }
